--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-hi
+<svg width="500" height="500"
+     viewBox="0 0 500 500" version="1.1"
+     xmlns="http://www.w3.org/2000/svg"
+     xmlns:xlink="http://www.w3.org/1999/xlink">
+    <circle cx="100" cy="100" r="50" style="fill:red;"/>
+    <circle cx="200" cy="100" r="50" style="fill:green"/>
+    <rect x="250" y="50" width="200" height="100" style="fill:yellow"/>
+    <text x=""  y="200" style="font-size:5em;fill:red">Hello SVG</text>
+</svg>
